--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,13 @@
-name: basic
+name: basic auto
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   greeter:
     runs-on: ubuntu-latest
     steps:
       - run: echo hello
-      - run: echo goodbye
+      - run: echo auto push test
